Finalize web service API endpoints (#211)
