# modules/custom/dkan_datastore/src/WebServiceApi.php
@@ -1,30 +1,40 @@
 <?php
 
-namespace Drupal\dkan_datastore\Controller;
+namespace Drupal\dkan_datastore;
 
 use Symfony\Component\DependencyInjection\ContainerInterface;
 use Drupal\Core\DependencyInjection\ContainerInjectionInterface;
-use Drupal\dkan_datastore\Service\Datastore;
 use Symfony\Component\HttpFoundation\JsonResponse;
+use Symfony\Component\HttpFoundation\RequestStack;
 
 /**
  * Class Api.
  *
- * @package Drupal\dkan_datastore\Controller
+ * @package Drupal\dkan_datastore
+ *
+ * @codeCoverageIgnore
  */
-class Api implements ContainerInjectionInterface {
+class WebServiceApi implements ContainerInjectionInterface {
   /**
    * Datastore Service.
    *
-   * @var \Drupa\dkan_datastore\Service\Datastore
+   * @var \Drupa\dkan_datastore\Service
    */
   protected $datastoreService;
 
   /**
+   * Request stack.
+   *
+   * @var \Symfony\Component\HttpFoundation\RequestStack
+   */
+  private $requestStack;
+
+  /**
    * Api constructor.
    */
-  public function __construct(Datastore $datastoreService) {
+  public function __construct(Service $datastoreService, RequestStack $requestStack) {
     $this->datastoreService = $datastoreService;
+    $this->requestStack = $requestStack;
   }
 
   /**
@@ -32,26 +42,27 @@ class Api implements ContainerInjectionInterface {
    */
   public static function create(ContainerInterface $container) {
     $datastoreService = $container->get('dkan_datastore.service');
-    return new Api($datastoreService);
+    $requestStack = $container->get('request_stack');
+    return new WebServiceApi($datastoreService, $requestStack);
   }
 
   /**
    * Returns the dataset along with datastore headers and statistics.
    *
-   * @param string $uuid
+   * @param string $identifier
    *   Identifier.
    *
    * @return \Symfony\Component\HttpFoundation\JsonResponse
    *   The json response.
    */
-  public function summary($uuid) {
+  public function summary($identifier) {
     try {
-      $data = $this->datastoreService->getStorage($uuid)->getSummary();
+      $data = $this->datastoreService->getStorage($identifier)->getSummary();
       return $this->successResponse($data);
     }
     catch (\Exception $e) {
       return $this->exceptionResponse(
-        new \Exception("A datastore for resource {$uuid} does not exist."),
+        new \Exception("A datastore for resource {$identifier} does not exist."),
         404
       );
     }
@@ -59,16 +70,17 @@ class Api implements ContainerInjectionInterface {
 
   /**
    * Import.
-   *
-   * @param string $uuid
-   *   The uuid of a dataset.
-   * @param bool $deferred
-   *   Whether or not the process should be deferred to a queue.
    */
-  public function import($uuid, $deferred = FALSE) {
+  public function import() {
+
+    $payloadJson = $this->requestStack->getCurrentRequest()->getContent();
+    $payload = json_decode($payloadJson);
+    if (!isset($payload->resource_id)) {
+      return $this->exceptionResponse(new \Exception("Invalid payload."));
+    }
 
     try {
-      $results = $this->datastoreService->import($uuid, $deferred);
+      $results = $this->datastoreService->import($payload->resource_id, FALSE);
       return $this->successResponse($results);
     }
     catch (\Exception $e) {
@@ -79,16 +91,16 @@ class Api implements ContainerInjectionInterface {
   /**
    * Drop.
    *
-   * @param string $uuid
+   * @param string $identifier
    *   The uuid of a dataset.
    */
-  public function delete($uuid) {
+  public function delete($identifier) {
     try {
-      $this->datastoreService->drop($uuid);
+      $this->datastoreService->drop($identifier);
       return $this->successResponse(
         [
-          "identifier" => $uuid,
-          "message" => "The datastore for resource {$uuid} was succesfully dropped.",
+          "identifier" => $identifier,
+          "message" => "The datastore for resource {$identifier} was succesfully dropped.",
         ]
       );
     }
@@ -105,7 +117,7 @@ class Api implements ContainerInjectionInterface {
    */
   public function list() {
     try {
-      $data = $this->datastoreService->listStoredImporters();
+      $data = $this->datastoreService->list();
       return $this->successResponse($data);
     }
     catch (\Exception $e) {
